--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Untitled. Design: <a>Marina Huber 2018</a>.</span>
+						<span class="copyright">&copy; CodeBohemia. Design: <a>Marina Huber 2018</a>.</span>
 					</footer>
 
 			</div>
