--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 								<li><a href="https://twitter.com/SerinnahHuber" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://stackoverflow.com/users/4406341/marina" class="icon fa-stack-overflow"><span class="label">Stackoverflow</span></a></li>
 								<li><a href="https://github.com/MarinaHuber" class="icon fa-github"><span class="label">Github</span></a></li>
-									<li><a href="https://www.linkedin.com/in/marinahuber" class="icon fa-linkedin-in"><span class="label">Linkedin</span></a></li>
+									<li><a href="https://www.linkedin.com/in/marinahuber" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
