--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
 						<p>iOS developer &nbsp;&bull;&nbsp; Surfer &nbsp;&bull;&nbsp; Designer</p>
 						<nav>
 							<ul>
+								<li><a href="#" class="icon fa-align-justify"><span class="label">More</span></a></li>
 								<li><a href="https://twitter.com/SerinnahHuber" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://stackoverflow.com/users/4406341/marina" class="icon fa-stack-overflow"><span class="label">Stackoverflow</span></a></li>
 								<li><a href="https://github.com/MarinaHuber" class="icon fa-github"><span class="label">Github</span></a></li>
-									<li><a href="https://www.linkedin.com/in/marinahuber" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://www.linkedin.com/in/marinahuber" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
