--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<p>iOS developer &nbsp;&bull;&nbsp; Surfer &nbsp;&bull;&nbsp; Designer</p>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon fa-lock-open-alt"><span class="label">More</span></a></li>
+								<li><a href="#" class="fal fa-lock-open-alt"><span class="label">More</span></a></li>
 								<li><a href="https://twitter.com/SerinnahHuber" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://stackoverflow.com/users/4406341/marina" class="icon fa-stack-overflow"><span class="label">Stackoverflow</span></a></li>
 								<li><a href="https://github.com/MarinaHuber" class="icon fa-github"><span class="label">Github</span></a></li>
