--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 							<ul>
 								<li><a href="#" class="icon fa-toggle-off" target="_blank"><span class="label">More</span></a></li>
 								<li><a href="https://twitter.com/SerinnahHuber" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
-								<li><a href="https://stackoverflow.com/users/4406341/marina" class="icon fa-stack-overflow"><span class="label">Stackoverflow</span></a></li>
-								<li><a href="https://github.com/MarinaHuber" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://stackoverflow.com/users/4406341/marina" class="icon fa-stack-overflow" target="_blank"><span class="label">Stackoverflow</span></a></li>
+								<li><a href="https://github.com/MarinaHuber" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
 								<li><a href="https://www.linkedin.com/in/marinahuber" class="icon fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
 								<!--  <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li> -->
 							</ul>
