add update content

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Marina Huber</h1>
+						<h1>Hi, I'm Marina aka. CodeBohemia</h1>
 						<p>iOS developer &nbsp;&bull;&nbsp; Surfer &nbsp;&bull;&nbsp; Designer</p>
 						<nav>
 							<ul>
