--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<title>About Code Bohemia</title>
 
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="css/images/favicon-16x16.png">
 
 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
