--- a/index.html
+++ b/index.html
@@ -1,51 +1,42 @@
-<!DOCTYPE HTML>
-<head>
-
-	<title>About Code Bohemia</title>
-
-	<link rel="icon" type="image/png" sizes="16x16" href="css/images/favicon-16x16.png">
-
-
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="description" content="iOS developer" />
-	<meta name="keywords" content="iOS developer" />
-
-
-		<link rel="stylesheet" href="css/skel.css" />
-		<link rel="stylesheet" href="css/style.css" />
-		<link rel="stylesheet" href="css/style-wide.css" />
-		<link rel="stylesheet" href="css/style-noscript.css" />
-
-		<script src="js/skel.min.js"></script>
-		<script src="js/init.js"></script>
-
-</head>
-
+<!DOCTYPE HTML5>
 
 <html>
+	<head>
+		<title>About Code Bohemia</title>
+
+  <link rel="icon" type="image/png" sizes="32x32" href="css/images/favicon-32x32.png">
+
+		<noscript>
+			<link rel="stylesheet" href="css/skel.css" />
+			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="css/style-wide.css" />
+			<link rel="stylesheet" href="css/style-noscript.css" />
+		</noscript>
+		<script src="js/skel.min.js"></script>
+		<script src="js/init.js"></script>
+		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+	</head>
 
 	<body class="loading">
 		<div id="wrapper">
 			<div id="bg"></div>
 			<div id="overlay"></div>
 			<div id="main">
-
 				<!-- Header -->
 					<header id="header">
 						<h1>Hi, I'm Marina aka. CodeBohemia</h1>
-						<p>iOS developer &nbsp;&bull;&nbsp; Surfer &nbsp;&bull;&nbsp; Designer</p>
-						<nav>
-							<ul>
-								<li><a href="#" class="icon fa-toggle-off" target="_blank"><span class="label">More</span></a></li>
-								<li><a href="https://twitter.com/SerinnahHuber" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
-								<li><a href="https://stackoverflow.com/users/4406341/marina" class="icon fa-stack-overflow" target="_blank"><span class="label">Stackoverflow</span></a></li>
-								<li><a href="https://github.com/MarinaHuber" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
-								<li><a href="https://www.linkedin.com/in/marinahuber" class="icon fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
-								<!--  <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li> -->
+					<p>iOS developer &nbsp;&bull;&nbsp; Surfer &nbsp;&bull;&nbsp; Designer</p>
+					<nav>
+						<ul>
+							<li><a href="#" class="icon fa-toggle-off" target="_blank"><span class="label">More</span></a></li>
+							<li><a href="https://twitter.com/SerinnahHuber" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+							<li><a href="https://stackoverflow.com/users/4406341/marina" class="icon fa-stack-overflow" target="_blank"><span class="label">Stackoverflow</span></a></li>
+							<li><a href="https://github.com/MarinaHuber" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
+							<li><a href="https://www.linkedin.com/in/marinahuber" class="icon fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
 							</ul>
 						</nav>
 					</header>
-
 
 				<!-- Footer -->
 					<footer id="footer">
