--- a/index.html
+++ b/index.html
@@ -1,48 +1,53 @@
-<!DOCTYPE HTML5>
-
+<!DOCTYPE HTML>
+<!--
+	Aerial by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
-		<title>About Code Bohemia</title>
-
-  <link rel="icon" type="image/png" sizes="96x96" href="css/images/favicon-96x96.png">
-
+		<title>Aerial by HTML5 UP</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		<script src="js/skel.min.js"></script>
+		<script src="js/init.js"></script>
 		<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-wide.css" />
 			<link rel="stylesheet" href="css/style-noscript.css" />
 		</noscript>
-		<script src="js/skel.min.js"></script>
-		<script src="js/init.js"></script>
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
-
 	<body class="loading">
 		<div id="wrapper">
 			<div id="bg"></div>
 			<div id="overlay"></div>
 			<div id="main">
+
 				<!-- Header -->
 					<header id="header">
-						<h1>Hi, I'm Marina aka. CodeBohemia</h1>
-					<p>iOS developer &nbsp;&bull;&nbsp; Surfer &nbsp;&bull;&nbsp; Designer</p>
-					<nav>
-						<ul>
-							<li><a href="#" class="icon fa-toggle-off" target="_blank"><span class="label">More</span></a></li>
-							<li><a href="https://twitter.com/SerinnahHuber" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
-							<li><a href="https://stackoverflow.com/users/4406341/marina" class="icon fa-stack-overflow" target="_blank"><span class="label">Stackoverflow</span></a></li>
-							<li><a href="https://github.com/MarinaHuber" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
-							<li><a href="https://www.linkedin.com/in/marinahuber" class="icon fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
+						<h1>Adam Jensen</h1>
+						<p>Security Chief &nbsp;&bull;&nbsp; Cyborg &nbsp;&bull;&nbsp; Never asked for this</p>
+						<nav>
+							<ul>
+								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+								<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; CodeBohemia. Design: <a>Marina Huber 2018</a>.</span>
+						<span class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>.</span>
 					</footer>
-
+				
 			</div>
 		</div>
 	</body>
