--- a/index3.html
+++ b/index3.html
@@ -4,14 +4,14 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
-		<title>Fullscreen Overlay Styles &amp; Effects | Demo 1</title>
+		<title>Fullscreen Overlay Styles &amp; Effects | Demo 3</title>
 		<meta name="description" content="Fullscreen Overlay Styles &amp; Effects" />
 		<meta name="keywords" content="fullscreen overlay, overlay menu, inspiration, styles, effect, css" />
 		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="../favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
-		<link rel="stylesheet" type="text/css" href="css/style1.css" />
+		<link rel="stylesheet" type="text/css" href="css/style3.css" />
   		<script src="js/modernizr.custom.js"></script>
 	</head>
 	<body>
@@ -24,9 +24,9 @@
 			<header class="codrops-header">
 				<h1>Fullscreen Overlay Styles &amp; Effects</h1>	
 				<nav class="codrops-demos">
-					<a class="current-demo" href="index.html">Huge Inc</a>
+					<a href="index.html">Huge Inc</a>
 					<a href="index2.html">Corner</a>
-					<a href="index3.html">Slide down</a>
+					<a class="current-demo" href="index3.html">Slide down</a>
 					<a href="index5.html">Scale</a>
 					<a href="index6.html">Door</a>
 					<a href="index7.html">Content Push</a><br/>
@@ -38,7 +38,7 @@
 				</nav>
 			</header>
 			<section>
-				<p>Overlay fades in and menu rotates slightly in perspective. As seen on <a href="http://hugeinc.com">Huge</a></p>
+				<p>Overlay simply slides down with the content.</p>
 				<p><button id="trigger-overlay" type="button">Open Overlay</button></p>
 			</section>
 			<section class="related">
@@ -54,7 +54,7 @@
 			</section>
 		</div><!-- /container -->
 		<!-- open/close -->
-		<div class="overlay overlay-hugeinc">
+		<div class="overlay overlay-slidedown">
 			<button type="button" class="overlay-close">Close</button>
 			<nav>
 				<ul>
