--- a/index11.html
+++ b/index11.html
@@ -4,14 +4,14 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
-		<title>Fullscreen Overlay Styles &amp; Effects | Demo 1</title>
+		<title>Fullscreen Overlay Styles &amp; Effects | Demo 11</title>
 		<meta name="description" content="Fullscreen Overlay Styles &amp; Effects" />
 		<meta name="keywords" content="fullscreen overlay, overlay menu, inspiration, styles, effect, css" />
 		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="../favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
-		<link rel="stylesheet" type="text/css" href="css/style1.css" />
+		<link rel="stylesheet" type="text/css" href="css/style11.css" />
   		<script src="js/modernizr.custom.js"></script>
 	</head>
 	<body>
@@ -24,7 +24,7 @@
 			<header class="codrops-header">
 				<h1>Fullscreen Overlay Styles &amp; Effects</h1>	
 				<nav class="codrops-demos">
-					<a class="current-demo" href="index.html">Huge Inc</a>
+					<a href="index.html">Huge Inc</a>
 					<a href="index2.html">Corner</a>
 					<a href="index3.html">Slide down</a>
 					<a href="index5.html">Scale</a>
@@ -33,12 +33,12 @@
 					<a href="index8.html">Content Scale</a>
 					<a href="index9.html">Corner Shape</a>
 					<a href="index10.html">Little Boxes</a>
-					<a href="index11.html">Simple Genie</a>
+					<a class="current-demo" href="index11.html">Simple Genie</a>
 					<a href="index12.html">Genie</a>
 				</nav>
 			</header>
 			<section>
-				<p>Overlay fades in and menu rotates slightly in perspective. As seen on <a href="http://hugeinc.com">Huge</a></p>
+				<p>Overlay scales up from down (simple genie effect).</p>
 				<p><button id="trigger-overlay" type="button">Open Overlay</button></p>
 			</section>
 			<section class="related">
@@ -54,7 +54,7 @@
 			</section>
 		</div><!-- /container -->
 		<!-- open/close -->
-		<div class="overlay overlay-hugeinc">
+		<div class="overlay overlay-simplegenie">
 			<button type="button" class="overlay-close">Close</button>
 			<nav>
 				<ul>
