--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Read Only by HTML5 UP</title>
+		<title>Code Bohemia</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -30,14 +30,13 @@
 			<!-- Header -->
 				<section id="header" class="skel-layers-fixed">
 					<header>
-						<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-						<h1 id="logo"><a href="#">Willis Corto</a></h1>
-						<p>I got reprogrammed by a rogue AI<br />
-						and now I'm totally cray</p>
+						<span class="image profile"><img src="images/profile.png" alt="" /></span>
+						<h1 id="logo"><a href="#">Marina Huber</a></h1>
+						<p>ioS Engineer</p>
 					</header>
 					<nav id="nav">
 						<ul>
-							<li><a href="#one" class="active">About</a></li>
+							<li><a href="#one" class="active">About me</a></li>
 							<li><a href="#two">Things I Can Do</a></li>
 							<li><a href="#three">A Few Accomplishments</a></li>
 							<li><a href="#four">Contact</a></li>
