--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<header>
 						<span class="image profile"><img src="images/profile.png" alt="" /></span>
 						<h1 id="logo"><a href="#">Marina Huber</a></h1>
-						<p>ioS Engineer</p>
+						<p>iOS Engineer</p>
 					</header>
 					<nav id="nav">
 						<ul>
@@ -59,7 +59,7 @@
 						<section id="one">
 							<div class="container">
 								<header class="major">
-									<h2>Read Only</h2>
+									<h2>I am passioante coder, part time designer and surfer</h2>
 									<p>Just an incredibly simple responsive site<br />
 									template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
 								</header>
