--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<!-- Header -->
 				<section id="header" class="skel-layers-fixed">
 					<header>
-						<span class="image profile"><img src="images/profile.png" alt="" /></span>
+						<span class="image avatar"><img src="images/profile.png" alt="" /></span>
 						<h1 id="logo"><a href="#">Marina Huber</a></h1>
 						<p>iOS Engineer</p>
 					</header>
