--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
 	<body>
+		<div id="mount-38ba352e78da9ce0940a0d803d5c9f5e5bb73559"></div>
+<script src="https://code.haiku.ai/scripts/core/HaikuCore.3.4.8.min.js"></script>
+<script src="https://cdn.haiku.ai/48e58324-8770-4798-ad1d-71d7813fac87/38ba352e78da9ce0940a0d803d5c9f5e5bb73559/index.embed.js"></script>
+<script>
+  HaikuComponentEmbed_selinas2slns_outline(
+    document.getElementById('mount-38ba352e78da9ce0940a0d803d5c9f5e5bb73559'),
+    {loop: true}
+  );
+</script>
 		<div id="wrapper">
 
 			<!-- Header -->
