--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 					<!-- Four -->
 						<section id="four">
 							<div class="container">
-								<h3>Contact Me</h3>
-								<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+								<h3>You want more?</h3>
+								<p>Contact or forward me to a friend who is in needs, and CC Marina (huber.marina@gmail.com).</p>
 								<form method="post" action="#">
 									<div class="row uniform">
 										<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
