--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 						<section id="one">
 							<div class="container">
 								<header class="major">
-									<h2>* * * *</h2>
-									<p>My name is Marina and I am a passionate coder, app designer and surfer.<br />
+									<h2>Hi,</h2>
+									<p>I am Marina and I am a passionate coder, app designer and surfer.<br />
 									In love with Swift and animations <a href="http://html5up.net">©</a>.</p>
 								</header>
 								<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
