--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 							<div class="container">
 								<header class="major">
 									<h2>Hi,</h2>
-									<p>I am Marina a passionate coder, app designer and surfer.<br />
-									In love with Swift and animations <a href="http://html5up.net">©</a>.</p>
+									<p>I am Marina aka. code Bohemiaa passionate coder, app designer and surfer. In love with Swift and animations <a href="https://medium.com/@huber.marina">©</a>.<br />
+									</p>
 								</header>
 								<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
 							</div>
