--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 								<h3>Things I Do</h3>
 								<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
 								<ul class="feature-icons">
-									<li class="fa-code">Write all the code</li>
-									<li class="fa-cubes">Stack small boxes</li>
-									<li class="fa-book">Read books and stuff</li>
+									<li class="fa-code">Write the code</li>
+									<li class="fa-cubes">OSS contributer</li>
+									<li class="fa-book">Read Apple Design GL</li>
 									<li class="fa-coffee">Drink coffee and blog</li>
 									<li class="fa-bolt">Lightning bolt</li>
 									<li class="fa-users">Do Unity C#</li>
