--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 									<p>I am Marina aka. code Bohemia, a passionate coder, app designer and surfer. In love with Swift and animations <a href="https://medium.com/@huber.marina">©</a>.<br />
 									</p>
 								</header>
-								<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+								<p>I am based in Croatia, started learning programming as a student at Harvard @ Dynamic Web Application semester course. With experience in projects developing Swift applications from 2016.</p>
 							</div>
 						</section>
 
