--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 									<p>I am Marina aka. code Bohemia, a passionate coder, app designer and surfer. In love with Swift and animations <a href="https://medium.com/@huber.marina">©</a>.<br />
 									</p>
 								</header>
-								<p>I am based in Croatia, started learning programming as a student at Harvard @ Dynamic Web Application semester course. With experience in projects developing Swift applications from 2016.</p>
+								<p>I am based in Croatia, started learning programming as a student at Harvard @ Dynamic Web Application semester course. With experience in projects developing Swift and Obj C applications from 2016.</p>
 							</div>
 						</section>
 
