--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 									<li class="fa-cubes">OSS contributer</li>
 									<li class="fa-book">Read Apple Design GL</li>
 									<li class="fa-coffee">Drink coffee and blog</li>
-									<li class="fa-bolt">Lightning bolt</li>
+									<li class="fa-bolt">Hackathons</li>
 									<li class="fa-users">Do Unity C#</li>
 								</ul>
 							</div>
