--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<ul>
 							<li><a href="#one" class="active">About me</a></li>
 							<li><a href="#two">Things I Can Do</a></li>
-							<li><a href="#three">A Few Accomplishments</a></li>
+							<li><a href="#three">Portfolio</a></li>
 							<li><a href="#four">Contact</a></li>
 						</ul>
 					</nav>
@@ -95,7 +95,7 @@
 					<!-- Three -->
 						<section id="three">
 							<div class="container">
-								<h3>A Few Accomplishments</h3>
+								<h3>A portfolio</h3>
 								<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
 								<div class="features">
 									<article>
