--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
 	<body>
-		<div id="mount-38ba352e78da9ce0940a0d803d5c9f5e5bb73559"></div>
+		<div id="mount-haiku-logo"></div>
 <script src="https://code.haiku.ai/scripts/core/HaikuCore.3.4.8.min.js"></script>
 <script src="https://cdn.haiku.ai/48e58324-8770-4798-ad1d-71d7813fac87/38ba352e78da9ce0940a0d803d5c9f5e5bb73559/index.embed.js"></script>
 <script>
   HaikuComponentEmbed_selinas2slns_outline(
-    document.getElementById('mount-38ba352e78da9ce0940a0d803d5c9f5e5bb73559'),
+    document.getElementById('mount-haiku-logo'),
     {loop: true}
   );
 </script>
@@ -504,7 +504,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<section id="footer">
 					<div class="container">
 						<ul class="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; CodeBohemia. All rights reserved.</li><li>Marina Huber 2018</a></li>
 						</ul>
 					</div>
 				</section>
