--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							<div class="container">
 								<header class="major">
 									<h2>Hi,</h2>
-									<p>I am Marina aka. code Bohemia, a passionate coder, app designer and surfer. In love with Swift and animations <a href="https://medium.com/@huber.marina">©</a>.<br />
+									<p>My anme is Marina I am a passionate coder, app designer and surfer. In love with Swift and animations <a href="https://medium.com/@huber.marina">©</a>.<br />
 									</p>
 								</header>
 								<p>I am based in Croatia, started learning programming as a student at Harvard @ Dynamic Web Application semester course. With experience in projects developing Swift and Obj C applications from 2016.</p>
