--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
 	<body>
-		<div id="mount-haiku-logo"></div>
+		<div id="mount-haiku-logo">
 <script src="https://code.haiku.ai/scripts/core/HaikuCore.3.4.8.min.js"></script>
 <script src="https://cdn.haiku.ai/48e58324-8770-4798-ad1d-71d7813fac87/38ba352e78da9ce0940a0d803d5c9f5e5bb73559/index.embed.js"></script>
 <script>
@@ -34,6 +34,7 @@
     {loop: true}
   );
 </script>
+</div>
 		<div id="wrapper">
 
 			<!-- Header -->
