fixes for large

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
+
+
 		<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
@@ -25,17 +27,17 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
 	<body>
-		<div id="mount-haiku-logo">
-<script src="https://code.haiku.ai/scripts/core/HaikuCore.3.4.8.min.js"></script>
-<script src="https://cdn.haiku.ai/48e58324-8770-4798-ad1d-71d7813fac87/38ba352e78da9ce0940a0d803d5c9f5e5bb73559/index.embed.js"></script>
-<script>
-  HaikuComponentEmbed_selinas2slns_outline(
-    document.getElementById('mount-haiku-logo'),
-    {loop: true}
-  );
-</script>
-</div>
 		<div id="wrapper">
+
+			<section id="mount"></section>
+			<script src="https://code.haiku.ai/scripts/core/HaikuCore.4.0.0.min.js"></script>
+			<script src="https://cdn.haiku.ai/48e58324-8770-4798-ad1d-71d7813fac87/6b3623d9f7d01f3a5f15137fbd14ea5305cea7aa/index.embed.js"></script>
+			<script>
+		HaikuComponentEmbed_selinas2slns_outline(
+	document.getElementById('mount'),
+	{loop: true}
+		);
+		</script>
 
 			<!-- Header -->
 				<section id="header" class="skel-layers-fixed">
@@ -67,9 +69,12 @@
 
 					<!-- One -->
 						<section id="one">
+
 							<div class="container">
+
 								<header class="major">
-									<h2>Hi,</h2>
+									<h2></h2>
+									<h2>Hey there!</h2>
 									<p>My name is Marina I am a passionate coder, app designer and surfer. In love with Swift and animations <a href="https://medium.com/@huber.marina">©</a>.<br />
 									</p>
 								</header>
@@ -102,21 +107,35 @@
 									<article>
 										<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 										<div class="inner">
-											<h4>Possibly broke spacetime</h4>
+											<h4>iOS app Sun Weather</h4>
 											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 										</div>
 									</article>
 									<article>
 										<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 										<div class="inner">
-											<h4>Terraformed a small moon</h4>
+											<h4>iOS app</h4>
 											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 										</div>
 									</article>
 									<article>
 										<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 										<div class="inner">
-											<h4>Snapped dark matter in the wild</h4>
+											<h4>App prototype</h4>
+											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+										</div>
+									</article>
+									<article>
+										<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+										<div class="inner">
+											<h4>App prototype</h4>
+											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+										</div>
+									</article>
+									<article>
+										<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+										<div class="inner">
+											<h4>App prototype</h4>
 											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 										</div>
 									</article>
