--- a/index.html
+++ b/index.html
@@ -29,15 +29,17 @@
 	<body>
 		<div id="wrapper">
 
-			<section id="mount"></section>
-			<script src="https://code.haiku.ai/scripts/core/HaikuCore.4.0.0.min.js"></script>
-			<script src="https://cdn.haiku.ai/48e58324-8770-4798-ad1d-71d7813fac87/6b3623d9f7d01f3a5f15137fbd14ea5305cea7aa/index.embed.js"></script>
-			<script>
-		HaikuComponentEmbed_selinas2slns_outline(
-	document.getElementById('mount'),
-	{loop: true}
-		);
-		</script>
+			<div id="mount"></div>
+<script src="https://code.haiku.ai/scripts/core/HaikuCore.4.0.0.min.js"></script>
+<script src="https://cdn.haiku.ai/48e58324-8770-4798-ad1d-71d7813fac87/c9396b385c431810563122e08b4783db927405d3/index.embed.js"></script>
+<script>
+  HaikuComponentEmbed_selinas2slns_outline(
+    document.getElementById('mount'),
+    {loop: true}
+
+  );
+</script>
+
 
 			<!-- Header -->
 				<section id="header" class="skel-layers-fixed">
@@ -67,13 +69,15 @@
 			<!-- Main -->
 				<div id="main">
 
+   	<!-- inline div mount -->
+
+
 					<!-- One -->
 						<section id="one">
 
 							<div class="container">
 
 								<header class="major">
-									<h2></h2>
 									<h2>Hey there!</h2>
 									<p>My name is Marina I am a passionate coder, app designer and surfer. In love with Swift and animations <a href="https://medium.com/@huber.marina">©</a>.<br />
 									</p>
@@ -146,8 +150,8 @@
 					<!-- Four -->
 						<section id="four">
 							<div class="container">
-								<h3>You want more?</h3>
-								<p>Contact or forward me to a friend who is in needs, and CC Marina (huber.marina@gmail.com).</p>
+								<h3>Want more?</h3>
+								<p>Contact or forward to a friend who is in need, and CC Marina (huber.marina@gmail.com).</p>
 								<form method="post" action="#">
 									<div class="row uniform">
 										<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
