gradient for panels

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <script>
   HaikuComponentEmbed_selinas2slns_outline(
     document.getElementById('mount'),
-    {loop: true}
+    {loop: false}
 
   );
 </script>
