--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<link rel="stylesheet" href="css/style-xlarge.css" />
 		</noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+		<link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
 	</head>
 	<body>
 		<div id="wrapper">
@@ -78,11 +79,11 @@
 							<div class="container">
 
 								<header class="major">
-									<h2>Hey there!</h2>
-									<p>My name is Marina I am a passionate coder, app designer and surfer. In love with Swift and animations <a href="https://medium.com/@huber.marina">©</a>.<br />
+									<h2>Hi there!</h2>
+									<p>My name is Marina I am a passionate coder, app designer and surfer. In love with Swift and animations.  I write about code, design, surfing and occasionally my strange outlook on life <a href ="https://medium.com/@huber.marina" target="_blank">©</a>.<br />
 									</p>
 								</header>
-								<p>I am based in Croatia, started learning programming as a student at Harvard @ Dynamic Web Application semester course. With experience in projects developing Swift and Obj C applications from 2016.</p>
+								<p>I am currently based in Croatia, started learning programming as a student at Harvard Uni @ Dynamic Web Application semester course. With experience in projects developing Swift and Obj-C applications from 2016.</p>
 							</div>
 						</section>
 
