--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#one" class="active">About me</a></li>
-							<li><a href="#two">Things I Can Do</a></li>
+							<li><a href="#two">Things I Do</a></li>
 							<li><a href="#three">Portfolio</a></li>
 							<li><a href="#four">Contact</a></li>
 						</ul>
@@ -83,7 +83,6 @@
 									<p>My name is Marina I am a passionate coder, app designer and surfer. In love with Swift and animations.  I write about code, design, surfing and occasionally my strange outlook on life <a href ="https://medium.com/@huber.marina" target="_blank">©</a>.<br />
 									</p>
 								</header>
-								<p>I am currently based in Croatia, started learning programming as a student at Harvard Uni @ Dynamic Web Application semester course. With experience in projects developing Swift and Obj-C applications from 2016.</p>
 							</div>
 						</section>
 
@@ -91,7 +90,7 @@
 						<section id="two">
 							<div class="container">
 								<h3>Things I Do</h3>
-								<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+							<p>I am currently based in Croatia, started learning programming as a student at Harvard Uni @ Dynamic Web Application semester course. With experience in projects developing Swift and Obj-C applications from 2016.</p>
 								<ul class="feature-icons">
 									<li class="fa-code">Write the code</li>
 									<li class="fa-cubes">OSS contributer</li>
