--- a/index.html
+++ b/index.html
@@ -54,13 +54,14 @@
 							<li><a href="#one" class="active">About me</a></li>
 							<li><a href="#two">Things I Do</a></li>
 							<li><a href="#three">Portfolio</a></li>
-							<li><a href="#four">Contact</a></li>
+							<li><a href="#four">Resources</a></li>
+							<li><a href="#five">Contact</a></li>
 						</ul>
 					</nav>
 					<footer>
 						<ul class="icons">
 							<li><a href="https://twitter.com/SerinnahHuber" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
-							<li><a href="https://stackoverflow.com/users/4406341/marina" class="icon fa-stack-overflow" target="_blank"><span class="label">Stackoverflow</span></a></li>
+							<li><a href="https://medium.com/@huber.marina" class="fa fa-medium" aria-hidden="true" target="_blank"><span class="label"></span></a></li>
 							<li><a href="https://github.com/MarinaHuber" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
 							<li><a href="https://www.linkedin.com/in/marinahuber" class="icon fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
 						</ul>
@@ -80,7 +81,7 @@
 
 								<header class="major">
 									<h2>Hi there!</h2>
-									<p>My name is Marina I am a passionate coder, app designer and surfer. In love with Swift and animations.  I write about code, design, surfing and occasionally my strange outlook on life <a href ="https://medium.com/@huber.marina" target="_blank">©</a>.<br />
+									<p>My name is Marina I am a passionate coder, app designer and surfer. In love with Swift and animations.  I write about code, design, surfing and occasionally my own outlook on life. <img src="https://img.shields.io/badge/download-now-blue.svg" height="23" alt="" /> <a href="/images/cv.pdf" download>my cv</a><br />
 									</p>
 								</header>
 							</div>
@@ -97,7 +98,7 @@
 									<li class="fa-book">Read Apple Design GL</li>
 									<li class="fa-coffee">Drink coffee and blog</li>
 									<li class="fa-bolt">Hackathons</li>
-									<li class="fa-users">Do Unity C#</li>
+									<li class="fa-users">Beginner Unity C#</li>
 								</ul>
 							</div>
 						</section>
@@ -106,7 +107,7 @@
 						<section id="three">
 							<div class="container">
 								<h3>A portfolio</h3>
-								<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+								<p>Designs and iOS apps, websites made in recent years. Last year I work for Enterprise store with signed NDA so these apps can not be shown.</p>
 								<div class="features">
 									<article>
 										<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
@@ -147,8 +148,94 @@
 							</div>
 						</section>
 
-					<!-- Four -->
+
+						<!-- Five -->
 						<section id="four">
+							<div class="container">
+								<h3>Resources to get me started</h3>
+
+								<section>
+									Here’s an shallow attempt to quantify my education based on books, talks, blog posts, or anything else that’s helped me get where I am & keep me <strong>insipred</strong>. It is <em>important</em> to know the legacy left behind, in order to move forward.
+									<h4><blockquote>You can be the perfect programmer, but if you don’t know how to find work, communicate your skill to others, work effectively with a team, or keep your wits about you in stressful situations, then all things do not matter.</blockquote></h4>
+									<header>
+										<h5>On Programming</h5>
+										<div class="row">
+											<div class="12u">
+												<ul>
+													<li>Swift Programming Guide <a href ="https://docs.swift.org/swift-book/index.html" target="_blank">for coding</a></li>
+													<li>The pragmatic programmer<a href ="https://docs.swift.org/swift-book/index.html" target="_blank"></a></li>
+													<li>Felis enim feugiat dolore viverra.</li>
+												</ul>
+									</header>
+									<header>
+										<h5>On Discipline</h5>
+										<div class="row">
+											<div class="12u">
+												<ul>
+													<li>The Great Memory Book<a href ="https://www.thriftbooks.com/w/the-great-memory-book_eric-jensen_karen-markowitz/664976/#isbn=1890460044&idiq=7168420" target="_blank"> - Karen Markowitz and Eric Jensen</a></li>
+													<li>Sagittis adipiscing lorem eleifend.</li>
+													<li>Felis enim feugiat dolore viverra.</li>
+												</ul>
+									</header>
+									<header>
+										<h5>On Happiness</h5>
+										<div class="row">
+											<div class="12u">
+												<ul>
+													<li>How to read water<a href ="https://www.amazon.com/How-Read-Water-Patterns-Puddles/dp/1615193588" target="_blank"> (how to navigate at sea) - Tristan Gooley</a></li>
+													<li>Effortless Action: Wu-wei As Conceptual Metaphor and Spiritual Ideal in Early China</li>
+													<li>John Cleese on laughing <a href ="https://www.youtube.com/watch?v=h7fyOLe-xn4" target="_blank">humor in corporate world</a></li>
+												</ul>
+									</header>
+									<header>
+										<h5>On Time Management and Productivity</h5>
+										<div class="row">
+											<div class="12u">
+												<ul>
+													<li>Time in space <a href ="https://medium.com/@huber.marina" target="_blank">for coding</a></li>
+													<li>Sagittis adipiscing lorem eleifend.</li>
+													<li>Felis enim feugiat dolore viverra.</li>
+												</ul>
+									</header>
+									<header>
+										<h5>On personal Entrepreneurship</h5>
+										<div class="row">
+											<div class="12u">
+												<ul>
+													<li>The 48 Laws of Power - Robert Greene <a href ="https://www.amazon.com/48-Laws-Power-Robert-Greene-ebook/dp/B0024CEZR6/ref=sr_1_1?s=digital-text&ie=UTF8&qid=1531862267&sr=1-1&keywords=48+laws+of+power&dpID=41EhEN9nsmL&preST=_SY445_QL70_&dpSrc=srch" target="_blank"> for power games being played around you</a></li>
+													<li>The One Device: The Secret History of the iPhone - Brian Merchant</li>
+													<li>Lean Analytics - Alistair Croll, use Data to Build a Better Startup Faster</li>
+												</ul>
+									</header>
+									<header>
+										<h5>My 3 Favorite Biographies and Memoirs</h5>
+										<div class="row">
+											<div class="12u">
+												<ul>
+													<li>Nikola Tesla: The extraordinary life of a <a href ="https://medium.com/@huber.marina" target="_blank">modern Prometheus</a></li>
+													<li>The Rational Optimist: How Prosperity Evolves - Matt Ridley (As someone whose always identified as an optimist, this book first made me want to reject it, but the more I’ve thought about it, the more I’ve agreed with it.)</li>
+													<li>Felis enim feugiat dolore viverra.</li>
+												</ul>
+									</header>
+									<hr />
+
+									<h5>My favorite piece of code</h5>
+									<pre><code>i = 0;
+
+while (!deck.isInOrder()) {
+    print 'Iteration ' + i;
+    deck.shuffle();
+    i++;
+}
+
+print("It took " + i + ' iterations to sort the deck.")
+					</code></pre>
+					</div>
+					</section>
+
+
+					<!-- Four -->
+						<section id="five">
 							<div class="container">
 								<h3>Want more?</h3>
 								<p>Contact or forward to a friend who is in need, and CC Marina (huber.marina@gmail.com).</p>
@@ -176,48 +263,9 @@
 						</section>
 
 					<!-- Five -->
-					<!--
-						<section id="five">
-							<div class="container">
-								<h3>Elements</h3>
 
-								<section>
-									<h4>Text</h4>
-									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
-									<hr />
-									<header>
-										<h4>Heading with a Subtitle</h4>
-										<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
-									</header>
-									<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
-									<header>
-										<h5>Heading with a Subtitle</h5>
-										<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
-									</header>
-									<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
-									<hr />
-									<h2>Heading Level 2</h2>
-									<h3>Heading Level 3</h3>
-									<h4>Heading Level 4</h4>
-									<h5>Heading Level 5</h5>
-									<h6>Heading Level 6</h6>
-									<hr />
-									<h5>Blockquote</h5>
-									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
-									<h5>Preformatted</h5>
-									<pre><code>i = 0;
 
-while (!deck.isInOrder()) {
-    print 'Iteration ' + i;
-    deck.shuffle();
-    i++;
-}
-
-print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
-								</section>
-
+	<!--
 								<section>
 									<h4>Lists</h4>
 									<div class="row">
@@ -520,9 +568,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 							</div>
 						</section>
-					-->
+
 
 				</div>
+
+-->
+
 
 			<!-- Footer -->
 				<section id="footer">
