add content cv and portfolio

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 								<header class="major">
 									<h2>Hi there!</h2>
-									<p>My name is Marina I am a passionate coder, app designer and surfer. In love with Swift and animations.  I write about code, design, surfing and occasionally my own outlook on life. <img src="https://img.shields.io/badge/download-now-blue.svg" height="23" alt="" /> <a href="/images/cv.pdf" download>my cv</a><br />
+									<p>My name is Marina I am a passionate coder, app designer and surfer. In love with Swift and animations.  I write about code, design, surfing and occasionally my own outlook on life. <img src="https://img.shields.io/badge/download-now-blue.svg" height="23" alt="" /> <a href="images/cv_iOS_progrMarina.pdf" target="_blank" download>my cv.</a><br />
 									</p>
 								</header>
 							</div>
@@ -110,14 +110,14 @@
 								<p>Designs and iOS apps, websites made in recent years. Last year I work for Enterprise store with signed NDA so these apps can not be shown.</p>
 								<div class="features">
 									<article>
-										<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="https://itunes.apple.com/us/app/sun-weather-cast/id1423713747?ls=1&mt=8" target="_blank" class="image"><img src="images/pic01.jpg" alt="" /></a>
 										<div class="inner">
 											<h4>iOS app Sun Weather</h4>
-											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											<p>Easy-to-use animated weather app with flying graphic icons of weather forecast (sun rays, thunder, waves). It provides weather forecast for iPad and iPhone.</p>
 										</div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://itunes.apple.com/us/app/sun-weather-cast/id1423713747?ls=1&mt=8" target="_blank" class="image"><img src="images/pic02.jpg" alt="" /></a>
 										<div class="inner">
 											<h4>iOS app</h4>
 											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
