--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 										<div class="row">
 											<div class="12u">
 												<ul>
-													<li>Swift Programming Guide <a href ="https://docs.swift.org/swift-book/index.html" target="_blank">for coding</a></li>
+													<li>Swift Programming Guide <a href ="https://docs.swift.org/swift-book/index.html" target="_blank"><em>A classic for coding</em></a></li>
 													<li>The pragmatic programmer<a href ="https://docs.swift.org/swift-book/index.html" target="_blank"></a></li>
 													<li>Felis enim feugiat dolore viverra.</li>
 												</ul>
@@ -173,7 +173,7 @@
 											<div class="12u">
 												<ul>
 													<li>The Great Memory Book<a href ="https://www.thriftbooks.com/w/the-great-memory-book_eric-jensen_karen-markowitz/664976/#isbn=1890460044&idiq=7168420" target="_blank"> - Karen Markowitz and Eric Jensen</a></li>
-													<li>Sagittis adipiscing lorem eleifend.</li>
+													<li>The Artist's Way Morning Pages Journal - Julia Cameron <a href ="https://www.amazon.com/Artists-Way-Morning-Pages-Journal/dp/0874778867" target="_blank"><em>About morning rutine</em></a></li>
 													<li>Felis enim feugiat dolore viverra.</li>
 												</ul>
 									</header>
