--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 												<ul>
 													<li>How to read water<a href ="https://www.amazon.com/How-Read-Water-Patterns-Puddles/dp/1615193588" target="_blank"> (how to navigate at sea) - Tristan Gooley</a></li>
 													<li>Effortless Action: Wu-wei As Conceptual Metaphor and Spiritual Ideal in Early China</li>
-													<li>John Cleese on laughing <a href ="https://www.youtube.com/watch?v=h7fyOLe-xn4" target="_blank">humor in corporate world</a></li>
+													<li>John Cleese on laughing <a href ="https://www.youtube.com/watch?v=h7fyOLe-xn4" target="_blank"><em>Humor in corporate world</em></a></li>
 												</ul>
 									</header>
 									<header>
@@ -202,7 +202,7 @@
 										<div class="row">
 											<div class="12u">
 												<ul>
-													<li>The 48 Laws of Power - Robert Greene <a href ="https://www.amazon.com/48-Laws-Power-Robert-Greene-ebook/dp/B0024CEZR6/ref=sr_1_1?s=digital-text&ie=UTF8&qid=1531862267&sr=1-1&keywords=48+laws+of+power&dpID=41EhEN9nsmL&preST=_SY445_QL70_&dpSrc=srch" target="_blank"> for power games being played around you</a></li>
+													<li>The 48 Laws of Power - Robert Greene <a href ="https://www.amazon.com/48-Laws-Power-Robert-Greene-ebook/dp/B0024CEZR6/ref=sr_1_1?s=digital-text&ie=UTF8&qid=1531862267&sr=1-1&keywords=48+laws+of+power&dpID=41EhEN9nsmL&preST=_SY445_QL70_&dpSrc=srch" target="_blank"><em>On power games being played around you</em></a></li>
 													<li>The One Device: The Secret History of the iPhone - Brian Merchant</li>
 													<li>Lean Analytics - Alistair Croll, use Data to Build a Better Startup Faster</li>
 												</ul>
