--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 												<ul>
 													<li>The Great Memory Book<a href ="https://www.thriftbooks.com/w/the-great-memory-book_eric-jensen_karen-markowitz/664976/#isbn=1890460044&idiq=7168420" target="_blank"> - Karen Markowitz and Eric Jensen</a></li>
 													<li>The Artist's Way Morning Pages Journal - Julia Cameron <a href ="https://www.amazon.com/Artists-Way-Morning-Pages-Journal/dp/0874778867" target="_blank"><em>About morning rutine</em></a></li>
-													<li>Felis enim feugiat dolore viverra.</li>
+													<li>The Teachings of Don Juan: A Yaqui Way of Knowledge - Carlos Castaneda <em>Processes of depersonalization and meditation</em></li>
 												</ul>
 									</header>
 									<header>
