--- a/index.html
+++ b/index.html
@@ -110,37 +110,37 @@
 								<p>Designs and iOS apps, websites made in recent years. Last year I work for Enterprise store with signed NDA so these apps can not be shown.</p>
 								<div class="features">
 									<article>
-										<a href="https://itunes.apple.com/us/app/sun-weather-cast/id1423713747?ls=1&mt=8" target="_blank" class="image"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="https://itunes.apple.com/us/app/sun-weather-cast/id1423713747?ls=1&mt=8" target="_blank" class="image"><img src="images/pic1.jpg" alt="" /></a>
 										<div class="inner">
 											<h4>iOS app Sun Weather</h4>
 											<p>Easy-to-use animated weather app with flying graphic icons of weather forecast (sun rays, thunder, waves). It provides weather forecast for iPad and iPhone.</p>
 										</div>
 									</article>
 									<article>
-										<a href="https://itunes.apple.com/us/app/sun-weather-cast/id1423713747?ls=1&mt=8" target="_blank" class="image"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" target="_blank" class="image"><img src="images/pic2.jpg" alt="" /></a>
+										<div class="inner">
+											<h4>iOS app YouTop</h4>
+											<p>Written in Obj-C during the time at App Academy.Ranking best YouTube videos app.</p>
+										</div>
+									</article>
+									<article>
+										<a href="#" class="image"><img src="images/pic3.jpg" alt="" /></a>
+										<div class="inner">
+											<h4>iOS prototype</h4>
+											<p> Email app that connects jobs and tasks with skilled operators.</p>
+										</div>
+									</article>
+									<article>
+										<a href="#" class="image"><img src="images/pic4.jpg" alt="" /></a>
 										<div class="inner">
 											<h4>iOS app</h4>
 											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 										</div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image"><img src="images/pic5.jpg" alt="" /></a>
 										<div class="inner">
-											<h4>App prototype</h4>
-											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-										</div>
-									</article>
-									<article>
-										<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-										<div class="inner">
-											<h4>App prototype</h4>
-											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-										</div>
-									</article>
-									<article>
-										<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-										<div class="inner">
-											<h4>App prototype</h4>
+											<h4>Website</h4>
 											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 										</div>
 									</article>
@@ -173,7 +173,7 @@
 											<div class="12u">
 												<ul>
 													<li>The Great Memory Book<a href ="https://www.thriftbooks.com/w/the-great-memory-book_eric-jensen_karen-markowitz/664976/#isbn=1890460044&idiq=7168420" target="_blank"> - Karen Markowitz and Eric Jensen</a></li>
-													<li>The Artist's Way Morning Pages Journal - Julia Cameron <a href ="https://www.amazon.com/Artists-Way-Morning-Pages-Journal/dp/0874778867" target="_blank"><em>About morning rutine</em></a></li>
+													<li>The Artist's Way Morning Pages Journal - Julia Cameron <a href ="https://www.amazon.com/Artists-Way-Morning-Pages-Journal/dp/0874778867" target="_blank"><em>About morning routine</em></a></li>
 													<li>The Teachings of Don Juan: A Yaqui Way of Knowledge - Carlos Castaneda <em>Processes of depersonalization and meditation</em></li>
 												</ul>
 									</header>
@@ -194,7 +194,6 @@
 												<ul>
 													<li>Time in space <a href ="https://medium.com/@huber.marina" target="_blank">for coding</a></li>
 													<li>Sagittis adipiscing lorem eleifend.</li>
-													<li>Felis enim feugiat dolore viverra.</li>
 												</ul>
 									</header>
 									<header>
@@ -214,7 +213,6 @@
 												<ul>
 													<li>Nikola Tesla: The extraordinary life of a <a href ="https://medium.com/@huber.marina" target="_blank">modern Prometheus</a></li>
 													<li>The Rational Optimist: How Prosperity Evolves - Matt Ridley (As someone whose always identified as an optimist, this book first made me want to reject it, but the more I’ve thought about it, the more I’ve agreed with it.)</li>
-													<li>Felis enim feugiat dolore viverra.</li>
 												</ul>
 									</header>
 									<hr />
