--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 										<a href="#" class="image"><img src="images/pic4.jpg" alt="" /></a>
 										<div class="inner">
 											<h4>iOS app</h4>
-											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											<p>Share and recycle things found for free online or on the street. Organize pick up or exchange.</p>
 										</div>
 									</article>
 									<article>
