--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 									<article>
 										<a href="#" class="image"><img src="images/pic4.jpg" alt="" /></a>
 										<div class="inner">
-											<h4>iOS app</h4>
+											<h4>iOS app TrashShare</h4>
 											<p>Share and recycle things found for free online or on the street. Organize pick up or exchange.</p>
 										</div>
 									</article>
