--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 											<div class="12u">
 												<ul>
 													<li>Time in space <a href ="https://medium.com/@huber.marina" target="_blank">for coding</a></li>
-													<li>Sagittis adipiscing lorem eleifend.</li>
+													<li>A Few Principles for Thinking Clearly - <a href ="https://medium.com/the-polymath-project/a-few-principles-for-thinking-clearly-d18a74a2ebe9" target="_blank"><em>blog project</em></a></li>
 												</ul>
 									</header>
 									<header>
@@ -213,6 +213,7 @@
 												<ul>
 													<li>Nikola Tesla: The extraordinary life of a <a href ="https://medium.com/@huber.marina" target="_blank">modern Prometheus</a></li>
 													<li>The Rational Optimist: How Prosperity Evolves - Matt Ridley (As someone whose always identified as an optimist, this book first made me want to reject it, but the more I’ve thought about it, the more I’ve agreed with it.)</li>
+													<li>Global Catastrophes and Trends: The Next 50 Years - Vaclav Smil</li>
 												</ul>
 									</header>
 									<hr />
