--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
 							<p>I am currently based in Croatia, started learning programming as a student at Harvard Uni @ Dynamic Web Application semester course. With experience in projects developing Swift and Obj-C applications from 2016.</p>
 								<ul class="feature-icons">
 									<li class="fa-code">Write the code</li>
-									<li class="fa-cubes">OSS contributer</li>
 									<li class="fa-book">Read Apple Design GL</li>
 									<li class="fa-coffee">Drink coffee and blog</li>
 									<li class="fa-bolt">Hackathons</li>
 									<li class="fa-users">Beginner Unity C#</li>
+									<li class="fa-cubes">OSS rookie</li>
 								</ul>
 							</div>
 						</section>
