--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.scrollzer.min.js"></script>
@@ -60,6 +61,9 @@
 					</nav>
 					<footer>
 						<ul class="icons">
+							<li><a href="https://twitter.com/SerinnahHuber?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @SerinnahHuber</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
+
+							
 							<li><a href="https://twitter.com/SerinnahHuber" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 							<li><a href="https://medium.com/@huber.marina" class="fa fa-medium" aria-hidden="true" target="_blank"><span class="label"></span></a></li>
 							<li><a href="https://github.com/MarinaHuber" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
@@ -578,7 +582,7 @@ print("It took " + i + ' iterations to sort the deck.")
 				<section id="footer">
 					<div class="container">
 						<ul class="copyright">
-							<li>&copy; CodeBohemia. All rights reserved.</li><li>Marina Huber 2018</a></li>
+							<li>&copy; CodeBohemia. All rights reserved.</li><li>Marina Huber 2019</a></li>
 						</ul>
 					</div>
 				</section>
