--- a/index.html
+++ b/index.html
@@ -61,10 +61,8 @@
 					</nav>
 					<footer>
 						<ul class="icons">
-							<li><a href="https://twitter.com/SerinnahHuber?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @SerinnahHuber</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
-
-							
-							<li><a href="https://twitter.com/SerinnahHuber" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+		
+							<li><a href="https://twitter.com/SerinnahHuber?ref_src=twsrc%5Etfw" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 							<li><a href="https://medium.com/@huber.marina" class="fa fa-medium" aria-hidden="true" target="_blank"><span class="label"></span></a></li>
 							<li><a href="https://github.com/MarinaHuber" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
 							<li><a href="https://www.linkedin.com/in/marinahuber" class="icon fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
