--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <script>
   HaikuComponentEmbed_selinas2slns_outline(
     document.getElementById('mount'),
-    {loop: false}
+    {loop: true}
 
   );
 </script>
@@ -61,7 +61,7 @@
 					</nav>
 					<footer>
 						<ul class="icons">
-		
+
 							<li><a href="https://twitter.com/SerinnahHuber?ref_src=twsrc%5Etfw" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 							<li><a href="https://medium.com/@huber.marina" class="fa fa-medium" aria-hidden="true" target="_blank"><span class="label"></span></a></li>
 							<li><a href="https://github.com/MarinaHuber" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
@@ -586,5 +586,6 @@ print("It took " + i + ' iterations to sort the deck.")
 				</section>
 
 		</div>
+
 	</body>
 </html>
